# BackupApp

./: .gitignore
backend/: CMakeLists.txt  backend.cpp
backend/include/: backend.hpp
gui/: main.py
gui/ui/: backup_window.py
